Update 브렌치와 병합의 개념.md

--- a/더모먼트 1차 과제/브렌치와 병합의 개념.md
+++ b/더모먼트 1차 과제/브렌치와 병합의 개념.md
@@ -1,2 +1,16 @@
 Branch란?
 ========
+브랜치는 Git에서 **코드의 갈래**를 만드는 기능이다.<br>
+하나의 프로젝트에서 여러 사람이 동시에 다른 작업을 하거나,<br>
+새로운 기능을 해볼수있게 도와주는 중요한 도구이다..<br>
+
+Checkout이란?
+======
+저장소에서 특정 커밋이나 다른 브랜치로 돌아가고 싶을 때 사용한다!<br>
+쉽게 말해서 **내가 작업하고 싶은 코드 상태로 이동** 이라고 생각하면 된다.
+
+Merge란?
+=====
+각자가 맡은 브랜치들을 **나중에 다시 main브랜치에** 합치는것이당<br>
+여러 명이 각자 작업한 코드를 모을수 있으며<br>
+하나의 프로젝트를 안전하게 나눠서 작업하고 나중에 합칠수 있다.
