--- a/더모먼트 2차 과제/전공 조사.md
+++ b/더모먼트 2차 과제/전공 조사.md
@@ -51,5 +51,18 @@ Js를 쓰면 웹페이지가 좀 더 모던해지고 퀄리티가 올라간다..
 example
 --------
 ![스크린샷 2025-04-17 201225](https://github.com/user-attachments/assets/1ef466f1-d56b-4843-b0b4-76d08e0c3859)
+<br>
+<br>
+<br>
 
+백엔드(BackEnd)란?
+==================
+ 웹이나 앱에서 사용자의 행동을 처리하고, 정보를 저장, 관리, 전달하며, 서버와 데이터베이스를 관리한다..<br>
+ 한마디로 사용자의 눈에 안보이는곳을 개발하고 관리한당.<br>
+ 프론트엔드에서 필요한 데이터베이스 등을 코드로 만든다
+<br>
+
+필요한 기술?
+-----------------
+데이터베이스, 웹 서버, 네트워크, 프로그래밍, 인프라 등에 대한 기술이 필요하당..<br>
 
