--- a/더모먼트 2차 과제/전공 조사.md
+++ b/더모먼트 2차 과제/전공 조사.md
@@ -58,11 +58,41 @@ example
 백엔드(BackEnd)란?
 ==================
  웹이나 앱에서 사용자의 행동을 처리하고, 정보를 저장, 관리, 전달하며, 서버와 데이터베이스를 관리한다..<br>
- 한마디로 사용자의 눈에 안보이는곳을 개발하고 관리한당.<br>
+ 한마디로 사용자의 **눈에 안보이는곳을 개발**하고 관리한당.<br>
  프론트엔드에서 필요한 데이터베이스 등을 코드로 만든다
 <br>
 
 필요한 기술?
 -----------------
-데이터베이스, 웹 서버, 네트워크, 프로그래밍, 인프라 등에 대한 기술이 필요하당..<br>
+*데이터베이스, 웹 서버, 네트워크, 프로그래밍, 인프라* 등에 대한 기술이 필요하당..<br>
+<br>
+<br>
+<br>
 
+디자인(UI/UX)란?
+=================
+**UI(User Interface)** : 화면에 보이는것들을 의미한다! 예를 들어 ***버튼, 메뉴, 글자, 색깔, 이미지*** 등을 디자인한다..<br>
+**UX(User Experience)** : 웹이나 앱이 ***편하게 쓰이는지, 불편한점, 헷갈리는게** 없는지를 고려한다.<br>
+예를 들어 사용자가 이점이 불편하거나 헷갈린다! 하면 수정해야한다..
+<br>
+
+필요한 도구들
+--------------
+피그마(Figma) → UI 디자인 + UX 설계 둘다 가능하다<br>
+어도비 XD     → UI/UX 디자인 전용 도구이다<br>
+스케치(Sketch)→ 맥에서 많이 쓰는것 같다<br>
+<br>
+<br>
+<br>
+
+클라우드(Cloud)가 뭘까?
+======================
+클라우드란 내 컴퓨터에 저장하지 않고 **인터넷에 저장하거나 사용**하는 기술이당<br>
+한마디로 클라우드에 저장하면? 집 컴퓨터로 작업하고 학교 컴퓨터나 휴대폰에서도 파일을 열수있따.<br>
+대표적인 예시로는 나도 쓰고있는 구글 드라이브가 있다.
+<br>
+
+필요한 기술
+-------------
+서버, 가상화, 네트워크, 스토리지(저장소), 보안, 리눅스, 프로그래밍 언어, 클라우드 플랫폼(AWS, GCP, Azure) 등이 필요하다..<br>
+공부할게 참 많아 보인다
