--- a/더모먼트 2차 과제/전공들 조사.md
+++ b/더모먼트 2차 과제/전공들 조사.md
@@ -1,11 +1,11 @@
 프론트엔드(FrontEnd)가 뭘까?
 =============================
 프론트엔드란 우리가 사용하는 **웹페이지의 앞부분**을 만드는것이다.<br>
-즉 사용자가 보는 화면을 만들고 설계하는것이다..<br>
+즉 사용자가 보는 화면을 만들고 설계하는것이다.<br>
 <br>
 
 ***FrontEnd <-> BackEnd***
-웹페이지를 개발하는데 서로서로가 꼭 필요하다<br>
+웹페이지를 개발하는데 서로서로가 꼭 필요하다.<br>
 +디자인<br>
 <br>
 
@@ -23,7 +23,7 @@
 Html이란?
 ----------
 **Html** 이란 웹페이지를 개발하는데 가장 기본적인 언어이다.<br>
-**Html** 를 이용하여 텍스트, 링크, 사진 등을 넣을수 있당<br>
+**Html** 를 이용하여 텍스트, 링크, 사진 등을 넣을수 있다.<br>
 
 
 ![스크린샷 2025-04-17 200435](https://github.com/user-attachments/assets/96b68ef1-a923-4b72-9b60-aa5e9f7edf60)
@@ -44,9 +44,9 @@ Css
 JavaScript
 ---------
 **JavaScript**는 Html과 Css로 만든것에 동적인것을 추가하고 싶을때 쓴다.<br>
-Js를 쓰면 웹페이지가 좀 더 모던해지고 퀄리티가 올라간다..<br>
-웹페이지 개발에서 중요하게 쓰이는 요소이당<br>
-또한 Js는 '객체지향 스크립트 언어' 로 웹페이지의 동작을 담당하고 있다<br>
+Js를 쓰면 웹페이지가 좀 더 모던해지고 퀄리티가 올라간다.<br>
+웹페이지 개발에서 중요하게 쓰이는 요소이다.<br>
+또한 Js는 '객체지향 스크립트 언어' 로 웹페이지의 동작을 담당하고 있다.<br>
 
 
 ![스크린샷 2025-04-17 201225](https://github.com/user-attachments/assets/38e91e8e-c376-4ece-b700-d60e61e654f0)
@@ -57,42 +57,42 @@ Js를 쓰면 웹페이지가 좀 더 모던해지고 퀄리티가 올라간다..
 
 백엔드(BackEnd)란?
 ==================
- 웹이나 앱에서 사용자의 행동을 처리하고, 정보를 저장, 관리, 전달하며, 서버와 데이터베이스를 관리한다..<br>
- 한마디로 사용자의 **눈에 안보이는곳을 개발**하고 관리한당.<br>
- 프론트엔드에서 필요한 데이터베이스 등을 코드로 만든다
+ 웹이나 앱에서 사용자의 행동을 처리하고, 정보를 저장, 관리, 전달하며, 서버와 데이터베이스를 관리한다.<br>
+ 한마디로 사용자의 **눈에 안보이는곳을 개발**하고 관리한다.<br>
+ 프론트엔드에서 필요한 데이터베이스 등을 코드로 만든다.
 <br>
 
 필요한 기술?
 -----------------
-*데이터베이스, 웹 서버, 네트워크, 프로그래밍, 인프라* 등에 대한 기술이 필요하당..<br>
+*데이터베이스, 웹 서버, 네트워크, 프로그래밍, 인프라* 등에 대한 기술이 필요하다.<br>
 <br>
 <br>
 <br>
 
 디자인(UI/UX)란?
 =================
-**UI(User Interface)** : 화면에 보이는것들을 의미한다! 예를 들어 ***버튼, 메뉴, 글자, 색깔, 이미지*** 등을 디자인한다..<br>
+**UI(User Interface)** : 화면에 보이는것들을 의미한다! 예를 들어 ***버튼, 메뉴, 글자, 색깔, 이미지*** 등을 디자인한다.<br>
 **UX(User Experience)** : 웹이나 앱이 ***편하게 쓰이는지, 불편한점, 헷갈리는게** 없는지를 고려한다.<br>
-예를 들어 사용자가 이점이 불편하거나 헷갈린다! 하면 수정해야한다..
+예를 들어 사용자가 이점이 불편하거나 헷갈린다! 하면 수정해야한다.
 <br>
 
 필요한 도구들
 --------------
-피그마(Figma) → UI 디자인 + UX 설계 둘다 가능하다<br>
-어도비 XD     → UI/UX 디자인 전용 도구이다<br>
-스케치(Sketch)→ 맥에서 많이 쓰는것 같다<br>
+피그마(Figma) → UI 디자인 + UX 설계 둘다 가능하다.<br>
+어도비 XD     → UI/UX 디자인 전용 도구이다.<br>
+스케치(Sketch)→ 맥에서 많이 쓰는것 같다.<br>
 <br>
 <br>
 <br>
 
 클라우드(Cloud)가 뭘까?
 ======================
-클라우드란 내 컴퓨터에 저장하지 않고 **인터넷에 저장하거나 사용**하는 기술이당<br>
-한마디로 클라우드에 저장하면? 집 컴퓨터로 작업하고 학교 컴퓨터나 휴대폰에서도 파일을 열수있따.<br>
+클라우드란 내 컴퓨터에 저장하지 않고 **인터넷에 저장하거나 사용**하는 기술이다.<br>
+한마디로 클라우드에 저장하면? 집 컴퓨터로 작업하고 학교 컴퓨터나 휴대폰에서도 파일을 열수있다.<br>
 대표적인 예시로는 나도 쓰고있는 구글 드라이브가 있다.
 <br>
 
 필요한 기술
 -------------
-서버, 가상화, 네트워크, 스토리지(저장소), 보안, 리눅스, 프로그래밍 언어, 클라우드 플랫폼(AWS, GCP, Azure) 등이 필요하다..<br>
-공부할게 참 많아 보인다
+서버, 가상화, 네트워크, 스토리지(저장소), 보안, 리눅스, 프로그래밍 언어, 클라우드 플랫폼(AWS, GCP, Azure) 등이 필요하다.<br>
+공부할게 참 많아 보인다.
