--- a/더모먼트 2차 과제/전공들 조사.md
+++ b/더모먼트 2차 과제/전공들 조사.md
@@ -8,6 +8,7 @@
 웹페이지를 개발하는데 서로서로가 꼭 필요하다.<br>
 +디자인<br>
 <br>
+<br>
 
 
 
@@ -20,7 +21,7 @@
   <br>
   <br>
 
-Html이란?
+Html
 ----------
 **Html** 이란 웹페이지를 개발하는데 가장 기본적인 언어이다.<br>
 **Html** 를 이용하여 텍스트, 링크, 사진 등을 넣을수 있다.<br>
@@ -29,10 +30,12 @@ Html이란?
 ![스크린샷 2025-04-17 200435](https://github.com/user-attachments/assets/96b68ef1-a923-4b72-9b60-aa5e9f7edf60)
 
 <br>
+<br>
 
 Css
 -------
-**Css**는 **Html** 에서 넣은 텍스트나 이미지를 디자인할수 있도록 해준다.<br>
+
+**Css** 는 **Html** 에서 넣은 텍스트나 이미지를 디자인할수 있도록 해준다.<br>
 그래서 더 자세한 디자인을 추가할수 있다.<br>
 
 
@@ -40,6 +43,8 @@ Css
 
 
 
+<br>
+<br>
 
 JavaScript
 ---------
@@ -51,6 +56,9 @@ Js를 쓰면 웹페이지가 좀 더 모던해지고 퀄리티가 올라간다.<
 
 ![스크린샷 2025-04-17 201225](https://github.com/user-attachments/assets/38e91e8e-c376-4ece-b700-d60e61e654f0)
 
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
@@ -68,6 +76,10 @@ Js를 쓰면 웹페이지가 좀 더 모던해지고 퀄리티가 올라간다.<
 <br>
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
 
 디자인(UI/UX)란?
 =================
@@ -81,6 +93,10 @@ Js를 쓰면 웹페이지가 좀 더 모던해지고 퀄리티가 올라간다.<
 피그마(Figma) → UI 디자인 + UX 설계 둘다 가능하다.<br>
 어도비 XD     → UI/UX 디자인 전용 도구이다.<br>
 스케치(Sketch)→ 맥에서 많이 쓰는것 같다.<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
