--- a/더모먼트 2차 과제/전공들 조사.md
+++ b/더모먼트 2차 과제/전공들 조사.md
@@ -110,5 +110,4 @@ Js를 쓰면 웹페이지가 좀 더 모던해지고 퀄리티가 올라간다.<
 
 필요한 기술
 -------------
-서버, 가상화, 네트워크, 스토리지(저장소), 보안, 리눅스, 프로그래밍 언어, 클라우드 플랫폼(AWS, GCP, Azure) 등이 필요하다.<br>
-공부할게 참 많아 보인다.
+서버, 가상화, 네트워크, 스토리지(저장소), 보안, 리눅스, 프로그래밍 언어, 클라우드 플랫폼(AWS, GCP, Azure) 등이 필요하다.
