Update 브렌치와 병합의 개념.md

--- a/더모먼트 1차 과제/브렌치와 병합의 개념.md
+++ b/더모먼트 1차 과제/브렌치와 병합의 개념.md
@@ -11,6 +11,6 @@ Checkout이란?
 
 Merge란?
 =====
-각자가 맡은 브랜치들을 **나중에 다시 main브랜치에** 합치는것이당<br>
+각자가 맡은 브랜치들을 나중에 다시 **특정 브랜치에** 합치는것이당<br>
 여러 명이 각자 작업한 코드를 모을수 있으며<br>
 하나의 프로젝트를 안전하게 나눠서 작업하고 나중에 합칠수 있다.
