--- a/더모먼트 2차 과제/전공들 조사.md
+++ b/더모먼트 2차 과제/전공들 조사.md
@@ -25,22 +25,20 @@ Html
 ----------
 **Html** 이란 웹페이지를 개발하는데 가장 기본적인 언어이다.<br>
 **Html** 를 이용하여 텍스트, 링크, 사진 등을 넣을수 있다.<br>
+<br>
+<br>
+
+Html 주요 태그들
+---------------
+
+레이아웃을 만들거나 콘텐츠를 나누는(division) 컨테이너로 사용하는 태그이다.<br>
+태그는 문단(paragraph)을 나타내는 태그이다. <br>
+주로 텍스트 콘텐츠를 단락으로 묶는 데 사용되며, 이미지나 입력 양식 요소처럼 문단의 일부로 볼 수 있는 요소도 콘텐츠로 포함할수 있다.
 
 
 ![스크린샷 2025-04-17 200435](https://github.com/user-attachments/assets/96b68ef1-a923-4b72-9b60-aa5e9f7edf60)
 
-'
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <p>안녕안녕 이건 깃허브 연습이야</p>
-</body>
-</html>
+
 
 
 <br>
@@ -52,7 +50,8 @@ Css
 **Css** 는 **Html** 에서 넣은 텍스트나 이미지를 디자인할수 있도록 해준다.<br>
 그래서 더 자세한 디자인을 추가할수 있다.<br>
 <br>
-아래 사진같이 **Css**에서 색깔이나 폰트, 텍스트 크기 위치 등을 바꾸고 싶으면 **body{}** 안에서 **background-color: tomato;** 이런식으로 적으면 색이 변경된다.<br>
+아래 사진같이 **Css**에서 *색깔이나 폰트, 텍스트 크기 위치* 등을 바꾸고 싶으면<br>
+**body{}** 안에서 **background-color: tomato;** 이런식으로 적으면 색이 변경된다.<br>
 또한 텍스트를 가운데로 정렬하고 싶으면 **text-aligen : center;** 이렇게 적으면 텍스트가 가운데로 정렬된다.<br>
 
 
