--- a/더모먼트 2차 과제/전공들 조사.md
+++ b/더모먼트 2차 과제/전공들 조사.md
@@ -31,9 +31,14 @@ Html
 Html 주요 태그들
 ---------------
 
-레이아웃을 만들거나 콘텐츠를 나누는(division) 컨테이너로 사용하는 태그이다.<br>
-태그는 문단(paragraph)을 나타내는 태그이다. <br>
-주로 텍스트 콘텐츠를 단락으로 묶는 데 사용되며, 이미지나 입력 양식 요소처럼 문단의 일부로 볼 수 있는 요소도 콘텐츠로 포함할수 있다.
+>- **div** 레이아웃을 만들거나 콘텐츠를 나누는(division) 컨테이너로 사용하는 태그이다.<br><br>
+>- **p** 태그는 문단(paragraph)을 나타내는 태그이다. <br>
+>- 주로 텍스트 콘텐츠를 단락으로 묶는 데 사용되며, 이미지나 입력 양식 요소처럼 문단의 일부로 볼 수 있는 요소도 콘텐츠로 포함할수 있다.<br><br>
+>- **a** 태그는 링크 걸기 요소이다.<br>
+href 속성으로 지정한 URL이 있으면, 이 태그의 콘텐츠로 표시되는 하이퍼링크(줄여서 '링크')를 나타낸다.<br>
+이 태그의 콘텐츠(예를 들어, 텍스트나 이미지 등)를 클릭하면 링크된 URL로 이동하게 된다.<br><br>
+>- **img** 태그는 이미지(image)를 의미하는 태그로, 웹 페이지에 이미지를 삽입할 때 사용한다.
+이미지를 삽입하려면 이 태그의 필수 속성인 src 속성의 값으로 삽입하려는 이미지 소스의 경로(URL)를 지정한다.<br><br><br>
 
 
 ![스크린샷 2025-04-17 200435](https://github.com/user-attachments/assets/96b68ef1-a923-4b72-9b60-aa5e9f7edf60)
@@ -50,9 +55,9 @@ Css
 **Css** 는 **Html** 에서 넣은 텍스트나 이미지를 디자인할수 있도록 해준다.<br>
 그래서 더 자세한 디자인을 추가할수 있다.<br>
 <br>
-아래 사진같이 **Css**에서 *색깔이나 폰트, 텍스트 크기 위치* 등을 바꾸고 싶으면<br>
-**body{}** 안에서 **background-color: tomato;** 이런식으로 적으면 색이 변경된다.<br>
-또한 텍스트를 가운데로 정렬하고 싶으면 **text-aligen : center;** 이렇게 적으면 텍스트가 가운데로 정렬된다.<br>
+>- 아래 사진같이 **Css**에서 *색깔이나 폰트, 텍스트 크기 위치* 등을 바꾸고 싶으면<br>
+>- **body{}** 안에서 **background-color: tomato;** 이런식으로 적으면 색이 변경된다.<br>
+>- 또한 텍스트를 가운데로 정렬하고 싶으면 **text-aligen : center;** 이렇게 적으면 텍스트가 가운데로 정렬된다.<br><br><br>
 
 
 
@@ -66,9 +71,9 @@ Css
 JavaScript
 ---------
 **JavaScript**는 Html과 Css로 만든것에 동적인것을 추가하고 싶을때 쓴다.<br>
-Js를 쓰면 웹페이지가 좀 더 모던해지고 퀄리티가 올라간다.<br>
 웹페이지 개발에서 중요하게 쓰이는 요소이다.<br>
 또한 Js는 '객체지향 스크립트 언어' 로 웹페이지의 동작을 담당하고 있다.<br>
+사용자와의 상호 작용을 처리하고, 웹 페이지의 콘텐츠를 동적으로 변경하며, 데이터를 가져오고 표시하는 등의 작업을 수행할 수 있다.
 
 
 ![스크린샷 2025-04-17 201225](https://github.com/user-attachments/assets/38e91e8e-c376-4ece-b700-d60e61e654f0)
