--- a/더모먼트 2차 과제/전공들 조사.md
+++ b/더모먼트 2차 과제/전공들 조사.md
@@ -31,13 +31,13 @@ Html
 Html 주요 태그들
 ---------------
 
->- **div** 레이아웃을 만들거나 콘텐츠를 나누는(division) 컨테이너로 사용하는 태그이다.<br><br>
->- **p** 태그는 문단(paragraph)을 나타내는 태그이다. <br>
+>- &lt;div&gt; 레이아웃을 만들거나 콘텐츠를 나누는(division) 컨테이너로 사용하는 태그이다.<br><br>
+>- &lt;p&gt; 태그는 문단(paragraph)을 나타내는 태그이다. <br>
 >- 주로 텍스트 콘텐츠를 단락으로 묶는 데 사용되며, 이미지나 입력 양식 요소처럼 문단의 일부로 볼 수 있는 요소도 콘텐츠로 포함할수 있다.<br><br>
->- **a** 태그는 링크 걸기 요소이다.<br>
+>- &lt;a&gt;태그는 링크 걸기 요소이다.<br>
 href 속성으로 지정한 URL이 있으면, 이 태그의 콘텐츠로 표시되는 하이퍼링크(줄여서 '링크')를 나타낸다.<br>
 이 태그의 콘텐츠(예를 들어, 텍스트나 이미지 등)를 클릭하면 링크된 URL로 이동하게 된다.<br><br>
->- **img** 태그는 이미지(image)를 의미하는 태그로, 웹 페이지에 이미지를 삽입할 때 사용한다.
+>- &lt;img&gt; 태그는 이미지(image)를 의미하는 태그로, 웹 페이지에 이미지를 삽입할 때 사용한다.
 이미지를 삽입하려면 이 태그의 필수 속성인 src 속성의 값으로 삽입하려는 이미지 소스의 경로(URL)를 지정한다.<br><br><br>
 
 
