--- a/더모먼트 전공과제/전공과제.md
+++ b/더모먼트 전공과제/전공과제.md
@@ -1,2 +1,10 @@
 HTML 기본구조
 -------------
+>- &lt;!DOCTYPE html&gt; : 브라우저가 쿼크 모드(Quirks Mode)가 아닌 표준 모드(Standards Mode)로 렌더링하도록 하기 위해 사용된다.<br><br>
+>- &lt;html&gt; &lt;/html&gt; : 태그는 HTML 문서의 루트(root) 요소다.<br>
+즉, 웹 브라우저가 HTML 문서로 인식할 수 있도록 시작점과 구조를 정의해주는 최상위 태그이다.<br><br>
+>- &lt;head&gt; : HTML 문서의 문자 인코딩, 타이틀, 설명, 스타일시트, 스크립트 등 문서 정보에 관련된 다양한 요소를 모아둔 태그이다.<br>
+이러한 정보들은 화면에 표시되지는 않지만 브라우저, 검색 엔진 및 다른 웹 기술 등 기계적 처리를 위한 정보들이다.<br><br>
+> - &lt;body&gt; : HTML 문서의 내용(contents)을 나타내는 태그입니다.
+
+이 태그는 루트 요소인 <html>의 두 번째 자식 요소이어야 하며, <html>의 첫 번째 자식 요소는 <head>입니다.
