--- a/더모먼트 전공과제/전공과제.md
+++ b/더모먼트 전공과제/전공과제.md
@@ -19,4 +19,6 @@ HTML 기본구조
 >- **&lt;p&gt;** : 문단(paragraph)을 나타내는 태그이다.<br><br>
 >- **&lt;a&gt;** : 링크 걸기 요소이다. href 속성으로 지정한 URL이 있으면, 이 태그의 콘텐츠로 표시되는 하이퍼링크(줄여서 '링크')를 나티낸다.<br><br>
 >- **&lt;img&gt;** : 이미지(image)를 의미하는 태그로, 웹 페이지에 이미지를 삽입할 때 사용한다.<br>
- src 속성의 값으로 삽입하려는 이미지 소스의 경로(URL)를 지정한다.
+ src 속성의 값으로 삽입하려는 이미지 소스의 경로(URL)를 지정한다.<br><br>
+>- **&lt;form&gt;** : 데이터를 제출하기 위한 웹 양식(폼) 영역을 나타낸다.<br>
+이 영역에는 웹 양식 관련 컨트롤 요소들이 포함되며, 이 요소들의 데이터를 다루거나 전송할 수 있도록 정의하는 데 사용된다.<br><br>
