--- a/더모먼트 전공과제/전공과제.md
+++ b/더모먼트 전공과제/전공과제.md
@@ -22,3 +22,4 @@ HTML 기본구조
  src 속성의 값으로 삽입하려는 이미지 소스의 경로(URL)를 지정한다.<br><br>
 >- **&lt;form&gt;** : 데이터를 제출하기 위한 웹 양식(폼) 영역을 나타낸다.<br>
 이 영역에는 웹 양식 관련 컨트롤 요소들이 포함되며, 이 요소들의 데이터를 다루거나 전송할 수 있도록 정의하는 데 사용된다.<br><br>
+>- **&lt;input&gt;** : 사용자로부터 데이터를 입력받기 위한 대화형 컨트롤을 나타낸다.
