--- a/더모먼트 전공과제/전공과제.md
+++ b/더모먼트 전공과제/전공과제.md
@@ -23,3 +23,30 @@ HTML 기본구조
 >- **&lt;form&gt;** : 데이터를 제출하기 위한 웹 양식(폼) 영역을 나타낸다.<br>
 이 영역에는 웹 양식 관련 컨트롤 요소들이 포함되며, 이 요소들의 데이터를 다루거나 전송할 수 있도록 정의하는 데 사용된다.<br><br>
 >- **&lt;input&gt;** : 사용자로부터 데이터를 입력받기 위한 대화형 컨트롤을 나타낸다.
+<br>
+<br>
+
+시맨틱 태그
+------------
+>- **&lt;header&gt;** : 일반적으로 말하는 웹 페이지의 맨 위에 있는 글로벌 헤더나 글이나 콘텐츠의 서두(서론, 서문)를 나타낼 때 사용한다.<br><br>
+>- **&lt;footer&gt;** : 일반적으로 웹 페이지의 맨 하단에 있는 글로벌(혹은 전역) 푸터를 나타내거나<br>
+글이나 콘텐츠 영역에 대한 작성자, 저작권 정보, 관련 문서에 대한 링크 등의 내용을 나타낸다.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
