--- a/더모먼트 전공과제/전공과제.md
+++ b/더모먼트 전공과제/전공과제.md
@@ -30,7 +30,11 @@ HTML 기본구조
 ------------
 >- **&lt;header&gt;** : 일반적으로 말하는 웹 페이지의 맨 위에 있는 글로벌 헤더나 글이나 콘텐츠의 서두(서론, 서문)를 나타낼 때 사용한다.<br><br>
 >- **&lt;footer&gt;** : 일반적으로 웹 페이지의 맨 하단에 있는 글로벌(혹은 전역) 푸터를 나타내거나<br>
-글이나 콘텐츠 영역에 대한 작성자, 저작권 정보, 관련 문서에 대한 링크 등의 내용을 나타낸다.
+글이나 콘텐츠 영역에 대한 작성자, 저작권 정보, 관련 문서에 대한 링크 등의 내용을 나타낸다.<br><br>
+>- **&lt;main&gt;** : HTML 문서의 주요 내용을 나타낸다.<br>
+여기서 주요 내용은 문서의 중심 주제 또는 응용 프로그램의 중심 기능과 직접 관련되거나 확장되는 내용으로 구성된다.<br><br>
+>- **&lt;section&gt; : 문서, 애플리케이션의 일반적인 섹션을 나타낸다.<br>
+더 적합한 의미를 가진 요소가 없을 때 논리적인 측면에서 주제별 콘텐츠 그룹을 나타내는데 사용한다.<br><br>
 
 
 
