--- a/더모먼트 전공과제/전공과제.md
+++ b/더모먼트 전공과제/전공과제.md
@@ -33,9 +33,22 @@ HTML 기본구조
 글이나 콘텐츠 영역에 대한 작성자, 저작권 정보, 관련 문서에 대한 링크 등의 내용을 나타낸다.<br><br>
 >- **&lt;main&gt;** : HTML 문서의 주요 내용을 나타낸다.<br>
 여기서 주요 내용은 문서의 중심 주제 또는 응용 프로그램의 중심 기능과 직접 관련되거나 확장되는 내용으로 구성된다.<br><br>
->- **&lt;section&gt; : 문서, 애플리케이션의 일반적인 섹션을 나타낸다.<br>
+>- **&lt;section&gt;** : 문서, 애플리케이션의 일반적인 섹션을 나타낸다.<br>
 더 적합한 의미를 가진 요소가 없을 때 논리적인 측면에서 주제별 콘텐츠 그룹을 나타내는데 사용한다.<br><br>
+>- **&lt;nav&gt;** : 다른 웹 페이지로 연결하거나 현재 웹 페이지의 콘텐츠 내부로 연결되는 탐색(을 위한 링크가 있는 영역을 나타낸다.<br>
+일반적인 예로는 메뉴, 목차, 색인 등이 있다.<br><br>
+>- **&lt;figure&gt;** : 주변 콘텐츠의 이해나 흐름과 관련된 이미지, 그림, 도표, 사진, 코드 목록 또는 기타 관련 콘텐츠 등의 독립된 콘텐츠를 나타내는 태그이다.
+<br>
+<br>
 
+폼과 입력 관련 태그
+-------------------
+>- **&lt;input&gt;** : 위에서 설명했듯이 사용자로부터 데이터를 입력받기 위한 대화형 컨트롤을 나타낸다.<br>
+이 태그는 type 속성 값에 따라 다양한 컨트롤 유형을 제공하며, type 속성 외에도<br> 여러 가지 속성을 통해 입력 필드의 동작을 세부적으로 조정할수있다.<br><br><br>
+>- **&lt;button&gt;** : 내용물에 의해 레이블이 지정된 버튼을 나타낸다.<br>
+이 태그는 웹 페이지에 사용자가 클릭할 수 있는 버튼을 만들고  버튼 안에 포함된 텍스트나 이미지가 버튼의 기능을 나타낸다.<br><br><br>
+>- **&lt;form&gt;** : 데이터를 제출하기 위한 웹 양식(form) 영역을 나타낸다.<br>
+이 영역에는 웹 양식 관련 컨트롤 요소들이 포함되며 이 요소들의 데이터를 다루거나 전송할 수 있도록 정의하는 데 사용된다.<br><br><br>
 
 
 
